added handlbar pages

--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <h1>This is Help Page</h1>
+  <h1>{{title}}</h1>
+  <img src="/images/aaa.jpg" alt="family picture">
+  <p>created by {{name}}</p>
 </body>
 </html>
