--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/css/styles.css">
-  <script src="/js/app.js"></script>
 </head>
 <body>
-  <h1>Welcome to my world!</h1>
-  <img src="/images/aaa.jpg" alt="family picture">
+  <h1>{{title}}</h1>
+  <p>contact {{name}}</p>
 </body>
 </html>
