applied handlebar templates

--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <h1>{{title}}</h1>
-  <img src="/images/aaa.jpg" alt="family picture">
-  <p>created by {{name}}</p>
+  {{>header}}
+  <p>{{helpText}}</p>
+  {{>footer}}
+
 </body>
 </html>
