--- a/web-server/templates/partials/footer.hbs
+++ b/web-server/templates/partials/footer.hbs
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <h1>{{title}}</h1>
-  <p>contact {{name}}</p>
 </body>
-</html>
+</html> --}}
+<p>copyright 2025 {{name}} All rights reserved</p>
