--- a/web-server/templates/partials/header.hbs
+++ b/web-server/templates/partials/header.hbs
@@ -1,17 +1,7 @@
-{{!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-</body>
-</html> --}}
-<h1>{{title}}</h1>
+<header>
+  <h1>{{title}}</h1>
 
-<div>
   <a href="/">Weather</a>  
   <a href="/about">About</a>  
   <a href="/help">Help</a>  
-</div>
+</header>
