--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>About</title>
   <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/images/weather.png">
 </head>
 <body>
+  <div class="main-content">
   {{>header}}
-  <img src="/images/aaa.jpg" alt="family picture">
+  <img class="portrait" src="/images/aaa.jpg" alt="family picture">
+  </div>
   {{>footer}}
 
 </body>
