--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Index</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/images/weather.png">
   <script src="/js/app.js"></script>
 </head>
 <body>
+  <div class="main-content">
   {{>header}}
+  <p>Use this site to get your weather</p>
+  </div>
+
   {{>footer}}
 </body>
 </html>
