--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,14 +4,22 @@
   <title>Index</title>
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" href="/images/weather.png">
-  <script src="/js/app.js"></script>
 </head>
 <body>
   <div class="main-content">
   {{>header}}
   <p>Use this site to get your weather</p>
+  <form action="">
+    <input placeholder="Location" type="text">
+    <button>Search</button>
+  </form>
+
+  <p id='msg1'></p>
+  <p id='msg2'></p>
   </div>
 
   {{>footer}}
+  
+  <script src="/js/app.js"></script>
 </body>
 </html>
